--- a/WebMVC/Views/Product/Index.cshtml
+++ b/WebMVC/Views/Product/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model List<Product>;
+﻿@model dynamic
 
+<div class="text-center">@Model.Title</div>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -10,7 +11,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var product in Model)
+        @foreach(var product in Model.product)
         {
         <tr>
             <th scope="row">@product.Id</th>
