--- a/P01-MvcConcept/Views/Products/Create.cshtml
+++ b/P01-MvcConcept/Views/Products/Create.cshtml
@@ -1,25 +1,24 @@
-﻿
-
+﻿@model Product
 
 <p>Create Page</p>
 
 <div class="container col-md-6">
-    <form>
+    <form asp-action="Create">
         <div class="mb-3">
             <label class="form-label">ID</label>
-            <input type="number" class="form-control">
+            <input asp-for="Id" type="number" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">Name</label>
-            <input class="form-control">
+            <input asp-for="Name" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">Price</label>
-            <input type="number" class="form-control">
+            <input asp-for="Price" type="number" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">Amount</label>
-            <input type="number" class="form-control">
+            <input asp-for="Amount" type="number" class="form-control">
         </div>
 
         <div class="d-flex justify-content-between w-50">
@@ -28,4 +27,5 @@
         </div>
     </form>
 </div>
+
 
