--- a/P01-MvcConcept/Views/Products/Index.cshtml
+++ b/P01-MvcConcept/Views/Products/Index.cshtml
@@ -15,10 +15,10 @@
         {
         <tr>
             <th scope="row">@product.Id</th>
-            <td colspan="2">@product.Name</td>
+            <td >@product.Name</td>
             <td>@product.Price</td>
             <td>@product.Amount</td>
-        </tr>
+         </tr>
         }
     </tbody>
 </table>
