--- a/P01-MvcConcept/Views/Products/Index.cshtml
+++ b/P01-MvcConcept/Views/Products/Index.cshtml
@@ -8,6 +8,7 @@
             <th scope="col">Name</th>
             <th scope="col">Price</th>
             <th scope="col">Amount</th>
+            <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
@@ -18,6 +19,11 @@
             <td >@product.Name</td>
             <td>@product.Price</td>
             <td>@product.Amount</td>
+            <td>
+                <a class="btn btn-outline-danger" href="/Products/Delete/@product.Id">Delete</a>
+                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@product.Id"
+                       onclick="return confirm('ยืนยันการลบ!')">Delete</a>
+            </td>
          </tr>
         }
     </tbody>
