--- a/P01-MvcConcept/Views/Shared/_Layout.cshtml
+++ b/P01-MvcConcept/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TestProduct" asp-action="Index">TestProduct</a>
+                        </li>
                     </ul>
                 </div>
             </div>
