--- a/P03_CodeFirst/Views/Product/Index.cshtml
+++ b/P03_CodeFirst/Views/Product/Index.cshtml
@@ -2,7 +2,7 @@
 
 
 <div>
-    <a class="btn btn-success">Create</a>
+    <a class="btn btn-success" asp-action="Create">Create</a>
     @if (TempData["OK"] != null )
     {
         <div class="alert alert-danger m-4" role="alert">
